--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Hanalei&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Festive&family=Lato:wght@200;400;800&display=swap");
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Oxanium";
+    font-family: "Bebas-Neue";
 }
 
 body {
-    background: linear-gradient(rgba(255, 255, 255, .5), rgba(255, 255, 255, .5)), url("./img/room19.jpeg");
-    /* background-image: url("./img/room19.jpeg"); */
-    width: 100vh;
+    background-image: url("./img/room19.jpeg");
+    width: 100vw;
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
-    color: rgb(255, 251, 0);
+    color: white;
     overflow: hidden;
 }
 
@@ -21,16 +20,15 @@ audio {
     display: none;
 }
 
-.App {
-    text-align: center;
-}
-
 h1 {
-    color: #f02f3fec;
-    font-family: 'Festive', cursive;
-    font-size: xxx-large;
+    color: #f10a0a;
+    font-family: "Festive";
+    font-size: 38px;
     text-shadow: white 1px 0 10px;
     text-align: center;
+    font-weight: bolder;
+    padding: 50px 0px 50px;
+    letter-spacing: 4px;
 }
 
 table {
@@ -128,5 +126,21 @@ th {
     }
     .red-tetris__col-stage>aside {
         width: 100px !important;
+    }
+}
+
+@media screen and (min-width: 2048px) {
+    .sound-icon-wrapper {
+        width: 100px !important;
+        height: 102px;
+    }
+    .red-tetris__col-stage>aside {
+        width: 120px !important;
+    }
+    .spectersWrapper {
+        flex-direction: column;
+    }
+    body {
+        background-color: lightgreen;
     }
 }
